--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.3",
 		"react-icons": "^5.0.1",
-		"react-router-dom": "^6.22.3"
+		"react-router-dom": "^6.22.3",
+		"react-tooltip": "^5.26.3"
 	},
 	"devDependencies": {
 		"@babel/preset-react": "^7.24.1",
