Adding local env and conditional at tabelCuti component

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
-MONGO = "mongodb+srv://alifadha:alifadha@cuti-rewrite.rqxnym3.mongodb.net/?retryWrites=true&w=majority&appName=cuti-rewrite"
+MONGO = "mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.5"
+MONGO1 = "mongodb+srv://alifadha:alifadha@cuti-rewrite.rqxnym3.mongodb.net/?retryWrites=true&w=majority&appName=cuti-rewrite"
 JWT = X8qX64tprs6Uws/TWu/J1+jL6yLq1IM3n9m4qGSkPH8=
