--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@preline/overlay": "^2.1.0",
 		"@preline/tooltip": "^2.1.0",
+		"@reduxjs/toolkit": "^2.2.4",
 		"axios": "^1.6.8",
 		"chart.js": "^4.4.2",
 		"preline": "^2.1.0",
@@ -20,8 +21,10 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.3",
 		"react-icons": "^5.0.1",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.22.3",
-		"react-tooltip": "^5.26.3"
+		"react-tooltip": "^5.26.3",
+		"redux": "^5.0.1"
 	},
 	"devDependencies": {
 		"@babel/preset-react": "^7.24.1",
